clusters/core-ci/cert-manager/ci-docs_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    haproxy.router.openshift.io/timeout: "90s"
  name: ci-docs
  namespace: ci
spec:
  ingressClassName: openshift-default
  tls:
    - secretName: ci-docs-tls
      hosts:
        - docs.ci.openshift.org
        - cluster-display.ci.openshift.org
  rules:
  - host: docs.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: ci-docs
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: cluster-display.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: ci-docs
            port:
              number: 8090
        pathType: ImplementationSpecific
