clusters/core-ci/cert-manager/gcsweb_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    haproxy.router.openshift.io/timeout: 1h
  name: gcsweb
  namespace: ci
spec:
  ingressClassName: openshift-default
  tls:
    - secretName: gcsweb-tls
      hosts:
        - gcs.ci.openshift.org
  rules:
  - host: gcs.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: gcsweb
            port:
              number: 80
        pathType: ImplementationSpecific
